--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,98 @@
-table {
+#mainDiv
+{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content:center;
+    align-items:center;
+    flex-direction: row;
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    flex-direction:row;
+
+}
+
+table{
     background-color: lightblue;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    ;
+
+}
+
+th{
+    background-color: blue;
+    font-size: 20px;
+}
+
+#editMateria
+{
+    position: absolute;
+    z-index: 10;
+    background-color: lightgreen;
+    width: 30%;
+    height: auto;
+    padding: 15px;
+    border: 3px solid green;
+    border-radius: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.btn {
+    background-color: silver;
+    padding: 5px;
+}
+
+#btnCancelar
+{
+    background-color: rgba(255, 0, 0, 0.5);
+    position: relative;
+    margin-left: 80%;
+}
+
+#btnModificar{
+    right: 0;
+    margin-left: auto;
+}
+
+#txtNombre
+{
+    width: 90%;
+}
+
+
+
+
+
+
+
+
+
+.spinner 
+{
+  position: absolute;
+  z-index: 11;
+  opacity: 40%;
+  border: 16px solid #f3f3f3; 
+  border-top: 16px solid #34db42; 
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin
+{
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+#error
+{
+    color: red;
 }
