--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,6 @@ table{
     width: 100%;
     height: 100%;
     position: relative;
-    ;
-
 }
 
 th{
@@ -65,18 +63,12 @@ th{
     width: 90%;
 }
 
-
-
-
-
-
-
-
-
 .spinner 
 {
   position: absolute;
-  z-index: 11;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
   opacity: 40%;
   border: 16px solid #f3f3f3; 
   border-top: 16px solid #34db42; 
@@ -94,5 +86,6 @@ th{
 
 #error
 {
+    font-size: 12px;
     color: red;
 }
