--- a/css/style.css
+++ b/css/style.css
@@ -63,15 +63,15 @@ th{
     width: 90%;
 }
 
-.spinner 
+#spinner 
 {
   position: absolute;
   z-index: 20;
   width: 100%;
   height: 100%;
-  opacity: 40%;
+  opacity: 60%;
   border: 16px solid #f3f3f3; 
-  border-top: 16px solid #34db42; 
+  border-top: 16px solid #d3e24a; 
   border-radius: 50%;
   width: 120px;
   height: 120px;
